# cpp-curve-editor-x

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cover.afphoto  cpp-curve-x.sln  cpp-curve-x.vcxproj  cpp-curve-x.vcxproj.filters  curve-editor-x.vcxproj  curve-editor-x.vcxproj.filters  curve-x.vcxproj  curve-x.vcxproj.filters  test.cvx
libs/: CMakeLists.txt
libs/raylib/: CMakeLists.txt
projects/curve-editor-x/: CMakeLists.txt  application.cpp  application.fwd.h  application.h  curve-editor-x.vcxproj  curve-editor-x.vcxproj.filters  curve-layer.h  editor.cpp  editor.h  main.cpp  user-input.h  utils.h  widget-manager.cpp  widget.h
projects/curve-editor-x/src/: application.h  curve-interpolate-mode.h  curve-layer.h  event.h  main.cpp  utils.cpp
projects/curve-editor-x/src/widgets/: curve-editor-widget.cpp  curve-editor-widget.h  curve-layers-tab-widget.cpp  curve-layers-tab-widget.h  widget-manager.h
projects/curve-editor-x/widgets/: curve-editor-widget.cpp  curve-editor-widget.h  curve-layer-row-widget.cpp  curve-layer-row-widget.h  curve-layers-tab-widget.cpp  curve-layers-tab-widget.h  widget-manager.h  widget.h
projects/curve-x/: curve-x.vcxproj  curve-x.vcxproj.filters
src/: application.cpp  application.h  curve-layer.h  main.cpp  settings.h  user-input.h  utils.cpp
src/curve-editor-x/: curve-layer-row-widget.cpp  curve-layer-row-widget.h  curve-layer.h  editor.cpp  editor.h  main.cpp  utils.cpp  utils.h  widget-manager.h  widget.h
src/curve-x/: curve-serializer.cpp  curve.cpp  curve.h  key.h  point.h  utils.h
src/editor/: editor.cpp  editor.h  utils.h
src/widgets/: curve-editor-widget.cpp  curve-editor-widget.h  curve-layer-row-widget.cpp  curve-layer-row-widget.h  curve-layers-tab-widget.cpp  curve-layers-tab-widget.h  widget-manager.cpp  widget-manager.h  widget.h
